--- a/src/css/sequenceViewer.css
+++ b/src/css/sequenceViewer.css
@@ -7,6 +7,7 @@
 .sequenceViewers {
     overflow-y: hidden;
     overflow-x: hidden;
+    background: black;
 }
 
 /* Disable the scroll bar from rendering */
